Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4665

Http2 not terminating stream with short chunked response

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • HTTP/2
    • None

    Description

      We saw this in production. The origin returned the chunked response immediately and it was all delivered with the header to the Http2Stream logic. It didn't set the END_STREAM flag and the stream wasn't closed until the timeout triggered.

      Fixing this required some additional checks to avoid shutdown race conditions.

      Attachments

        Issue Links

          Activity

            People

              shinrich Susan Hinrichs
              shinrich Susan Hinrichs
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h
                  1h