TS-4665: Http2 not terminating stream with short chunked response.

(cherry picked from commit 5e9b18a1a8ed584e4e7cbbab9121b303b9465915)